--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <name>elasticsearch-etcd-discovery</name>
+    <name>elasticsearch-marathon-discovery</name>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.searchly</groupId>
-    <artifactId>elasticsearch-etcd-discovery</artifactId>
+    <artifactId>elasticsearch-marathon-discovery</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
-    <description>elasticsearch elasticsearch-etcd-discovery plugin</description>
+    <description>elasticsearch elasticsearch-marathon-discovery plugin</description>
     <inceptionYear>2014</inceptionYear>
     <licenses>
         <license>
@@ -17,7 +17,7 @@
         </license>
     </licenses>
     <properties>
-        <elasticsearch.version>1.3.0</elasticsearch.version>
+        <elasticsearch.version>1.3.5</elasticsearch.version>
         <lucene.version>4.9.0</lucene.version>
     </properties>
     <build>
@@ -77,11 +77,7 @@
             <version>${elasticsearch.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.justinsb</groupId>
-            <artifactId>etcd-client</artifactId>
-            <version>0.1-SNAPSHOT</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.elasticsearch</groupId>
@@ -103,6 +99,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.mohitsoni</groupId>
+            <artifactId>marathon-client</artifactId>
+            <version>0.4.1</version>
         </dependency>
 
         <dependency>
