--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
         <maven-release.version>2.5.1</maven-release.version>
     </properties>
     <scm>
-        <connection>scm:git:https://github.com/searchly/elasticsearch-marathon-discovery.git/</connection>
-        <developerConnection>scm:git:git://github.com/searchly/elasticsearch-marathon-discovery.git/</developerConnection>
+        <connection>scm:git:https://github.com/searchly/elasticsearch-marathon-discovery.git</connection>
+        <developerConnection>scm:git:git://github.com/searchly/elasticsearch-marathon-discovery.git</developerConnection>
         <url>https://github.com/searchly/elasticsearch-marathon-discovery</url>
         <tag>HEAD</tag>
     </scm>
