--- a/release.properties
+++ b/release.properties
@@ -1,18 +1,18 @@
 #release configuration
-#Sun Nov 09 22:48:40 EET 2014
+#Tue Apr 28 15:21:37 EEST 2015
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=elasticsearch-marathon-discovery-0.0.1
+scm.tag=elasticsearch-marathon-discovery-0.0.3
 pushChanges=true
 scm.url=scm\:git\:https\://github.com/searchly/elasticsearch-marathon-discovery.git
 preparationGoals=clean verify
 project.scm.com.searchly\:elasticsearch-marathon-discovery.developerConnection=scm\:git\:https\://github.com/searchly/elasticsearch-marathon-discovery.git
-project.dev.com.searchly\:elasticsearch-marathon-discovery=0.0.2-SNAPSHOT
+project.dev.com.searchly\:elasticsearch-marathon-discovery=0.0.4-SNAPSHOT
 project.scm.com.searchly\:elasticsearch-marathon-discovery.tag=HEAD
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
 project.scm.com.searchly\:elasticsearch-marathon-discovery.url=https\://github.com/searchly/elasticsearch-marathon-discovery
-project.rel.com.searchly\:elasticsearch-marathon-discovery=0.0.1
+project.rel.com.searchly\:elasticsearch-marathon-discovery=0.0.3
 exec.snapshotReleasePluginAllowed=false
 completedPhase=end-release
 project.scm.com.searchly\:elasticsearch-marathon-discovery.connection=scm\:git\:https\://github.com/searchly/elasticsearch-marathon-discovery.git
