--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.searchly</groupId>
     <artifactId>elasticsearch-marathon-discovery</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>elasticsearch elasticsearch-marathon-discovery plugin</description>
     <licenses>
@@ -29,7 +29,7 @@
         <connection>scm:git:https://github.com/searchly/elasticsearch-marathon-discovery.git</connection>
         <developerConnection>scm:git:https://github.com/searchly/elasticsearch-marathon-discovery.git</developerConnection>
         <url>https://github.com/searchly/elasticsearch-marathon-discovery</url>
-        <tag>elasticsearch-marathon-discovery-0.0.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
